--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,20 @@
         "."
     ],
     "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true
+    "python.testing.pytestEnabled": true,
+    "python.autoComplete.extraPaths": ["./**"],
+    "terminal.integrated.env.osx": {
+        "PYTHONPATH": "${workspaceFolder}/",
+      },
+      "terminal.integrated.env.linux": {
+        "PYTHONPATH": "${workspaceFolder}/",
+      },
+      "terminal.integrated.env.windows": {
+        "PYTHONPATH": "${workspaceFolder}/",
+      },
+      "python.envFile": "${workspaceFolder}/.env",
+      "python.analysis.extraPaths": [
+        "./**"
+      ]
+    
 }
